aligns cells to center, fixes alternating row color

--- a/ui/layouts/table-layout.reel/table-layout.css
+++ b/ui/layouts/table-layout.reel/table-layout.css
@@ -34,7 +34,7 @@
     font-weight: 200;
 }
 
-/* .Table-row-group .Table-row:nth-child(odd) { background-color: rgba(0,0,0,.1); } */
+.Table-row-group .Table-row:nth-child(odd) { background-color: rgba(0,0,0,.15); }
 
 .Table-row-group .Table-row:hover { background-color: rgba(59, 110, 162, 0.1); }
 
